--- a/Public/index.html
+++ b/Public/index.html
@@ -9,54 +9,61 @@
 </head>
 
 <body>
+  <!-- MAIN CONTAINER -->
   <div class="container">
+
+     <!-- LEFT SIDE -->
     <div class="left">
       <h4>Your Result</h4>
       <div class="score-left">
         <span class="big-score">76</span>
         <span class="small-score">of 100</span>
       </div>
+
       <div class="left-text">
         <h3>Great</h3>
-        <p>
-          You scored higher than 65% of the people who have taken these
-          tests.</p>
+        <p> You scored higher than 65% of the people who have taken these tests.</p>
         </p>
       </div>
     </div>
+     <!-- RIGHT SIDE -->
     <div class="right">
       <h4>Summary</h4>
       <div class="scores">
+         <!-- REACTION -->
         <div class="score-reaction score">
           <div class="score-con">
-            <img src="/assets/images/icon-reaction.svg" alt="Reaction" />
+            <img src="assets/images/icon-reaction.svg" alt="Reaction" />
             <span>Reaction</span>
           </div>
-          <span class="black-text">80 / <span class="grey">100</span></span>
+          <span class="black-text">80 / <span class="grey-color">100</span></span>
         </div>
+        <!-- MEMORY -->
         <div class="score-memory score">
           <div class="score-con">
-            <img src="/assets/images/icon-memory.svg" alt="Memory" />
+            <img src="/Public/assets/images/icon-memory.svg" alt="Memory" />
             <span>Memory</span>
           </div>
-          <span class="black-text">92 / <span class="grey">100</span></span>
+          <span class="black-text">92 / <span class="grey-color">100</span></span>
         </div>
+        <!-- VERBAL -->
         <div class="score-verbal score">
           <div class="score-con">
-            <img src="/assets/images/icon-verbal.svg" alt="Verbal" />
+            <img src="/Public/assets/images/icon-verbal.svg" alt="Verbal" />
             <span>Verbal</span>
           </div>
-          <span class="black-text">61 / <span class="grey">100</span></span>
+          <span class="black-text">61 / <span class="grey-color">100</span></span>
         </div>
+        <!-- VISUAL -->
         <div class="score-visual score">
           <div class="score-con">
-            <img src="/assets/images/icon-visual.svg" alt="Visual" />
+            <img src="/Public/assets/images/icon-visual.svg" alt="Visual" />
             <span>Visual</span>
           </div>
-          <span class="black-text">72 / <span class="grey">100</span></span>
+          <span class="black-text">72 / <span class="grey-color">100</span></span>
         </div>
-
         <button> Continue </button>
-
+      </div>
+    </div>
         </body>
 </html>
